For deDoc Testing, big update. Specially for sparse_matrix_in function, make sure the sparse matrix shape is same to the genome.

--- a/feature-scHiC.ipynb
+++ b/feature-scHiC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "c10f28db-1387-49c3-96ce-f7a691236958",
    "metadata": {
     "tags": []
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "996a4b75-c5b8-4772-9a33-bacb422587da",
    "metadata": {},
    "outputs": [],
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "c424a572-6a05-47ac-878e-ca04d5b56c0e",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "[30970 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,6 +631,50 @@
     "\n",
     "ans = sizes2bed(sizes,100000)\n",
     "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "22abe61d-576a-4f9c-94e5-a5db5bc315d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1712"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ans[(ans[\"chrname\"].isin([\"chr6\",\"6\"]))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2f84d5e9-c4c2-4681-93a4-195638496862",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('chr6', 'chr13', '6', '13')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_file = \"/home/yangqian/storage/Bio/projects/HiST/test-scHiC-TLout/Matrix_aligned/hg19_PBMC_18cells/100k/chr6_chr13_100k.txt\"\n",
+    "chr1, chr2 = os.path.basename(matrix_file).split('_')[0],os.path.basename(matrix_file).split('_')[1]\n",
+    "chr1,chr2,chr1.lstrip('chr'),chr2.lstrip('chr')"
    ]
   },
   {
