Update for scHiC, extreamly sparse matrix.

--- a/feature-scHiC.ipynb
+++ b/feature-scHiC.ipynb
@@ -819,6 +819,155 @@
     "sizes = pd.read_csv(sizes_path,sep='\\t',header=None)\n",
     "TLplotandBEDproduce(path,sample_name,sv_result_sort[0:result_pick_len],sizes,False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2ffd6d36-06c5-40b5-aac2-2effdf6fa55b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.10192968e-04 1.10215502e-04 1.11817345e-04 1.16802095e-04\n",
+      " 1.21152127e-04 1.22012260e-04 1.24343044e-04 1.28584152e-04\n",
+      " 1.32222191e-04 1.32630411e-04 1.35201798e-04 1.36735373e-04\n",
+      " 1.51588326e-04 1.58981441e-04 1.67852498e-04 1.72582907e-04\n",
+      " 1.75914281e-04 1.78930387e-04 1.84415673e-04 1.90681139e-04\n",
+      " 1.93268126e-04 1.99600766e-04 2.02554935e-04 2.15115348e-04\n",
+      " 2.16485086e-04 2.44486483e-04 2.49842482e-04 2.53983337e-04\n",
+      " 2.83174998e-04 2.89394904e-04 3.14801118e-04 3.49480212e-04\n",
+      " 1.00011281e+00 1.00020469e+00 1.00030338e+00 2.69731920e+00\n",
+      " 6.30289740e+00] [1.10192968e-04 1.10215502e-04 1.11817345e-04 1.16802095e-04\n",
+      " 1.21152127e-04 1.22012260e-04 1.24343044e-04 1.28584152e-04\n",
+      " 1.32222191e-04 1.32630411e-04 1.35201798e-04 1.36735373e-04\n",
+      " 1.51588326e-04 1.58981441e-04 1.67852498e-04 1.72582907e-04\n",
+      " 1.75914281e-04 1.78930387e-04 1.84415673e-04 1.90681139e-04\n",
+      " 1.93268126e-04 1.99600766e-04 2.02554935e-04 2.15115348e-04\n",
+      " 2.16485086e-04 2.44486483e-04 2.49842482e-04 2.53983337e-04\n",
+      " 2.83174998e-04 2.89394904e-04 3.14801118e-04 3.49480212e-04\n",
+      " 1.00011281e+00 1.00020469e+00 1.00030338e+00 2.69731920e+00\n",
+      " 6.30289740e+00]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([-7.59461977e-16, -2.34951844e-16, -1.39787335e-16, -3.25810787e-17,\n",
+       "        -9.18459394e-18, -5.72166997e-18, -3.42328165e-18, -2.47404910e-18,\n",
+       "        -1.70535865e-18, -3.61250479e-19, -3.07159449e-19, -2.93426371e-19,\n",
+       "        -2.47559841e-19, -1.69999729e-19, -8.03099306e-20, -5.90106310e-20,\n",
+       "        -5.72260324e-20, -5.35509981e-20, -4.70258774e-20, -4.57582571e-20,\n",
+       "        -4.34252401e-20, -4.17453298e-20, -4.03609217e-20, -3.96762781e-20,\n",
+       "        -3.69064780e-20, -3.66517140e-20, -3.57780815e-20, -3.49105879e-20,\n",
+       "        -3.35655313e-20, -3.30168370e-20, -3.29969294e-20, -2.95444108e-20,\n",
+       "        -2.94179287e-20, -2.87649037e-20, -2.80064901e-20, -2.33491091e-20,\n",
+       "        -2.27876791e-20, -2.23548523e-20, -2.08014106e-20, -1.78998925e-20,\n",
+       "        -1.73452048e-20, -1.65403285e-20, -1.56300571e-20, -1.35800423e-20,\n",
+       "        -1.27673585e-20, -1.24124507e-20, -1.24087205e-20, -1.18157892e-20,\n",
+       "        -1.16587689e-20, -1.07440500e-20, -1.05886299e-20, -9.69831315e-21,\n",
+       "        -8.44244482e-21, -8.43630940e-21, -7.93513860e-21, -7.53654542e-21,\n",
+       "        -7.30122536e-21, -6.40670407e-21, -6.01576919e-21, -5.91771882e-21,\n",
+       "        -5.62533416e-21, -5.49568304e-21, -5.35589083e-21, -4.26574384e-21,\n",
+       "        -4.24006880e-21, -3.99612116e-21, -3.80310905e-21, -3.51791682e-21,\n",
+       "        -3.28536556e-21, -3.08041138e-21, -2.58637733e-21, -2.58234884e-21,\n",
+       "        -2.48619202e-21, -2.29018948e-21, -1.79989483e-21, -1.65219684e-21,\n",
+       "        -1.50887253e-21, -1.40358161e-21, -1.37626763e-21, -1.22151736e-21,\n",
+       "        -1.15517605e-21, -1.01783295e-21, -9.28700017e-22, -8.50134982e-22,\n",
+       "        -8.04385324e-22, -7.12997290e-22, -6.04848661e-22, -5.66255861e-22,\n",
+       "        -4.26621670e-22, -3.93733041e-22, -2.58142818e-22, -2.25369019e-22,\n",
+       "        -2.01282363e-22, -1.55237883e-22, -9.23417970e-23, -7.26380734e-23,\n",
+       "        -2.49838947e-23, -1.43213088e-23, -6.47014660e-24, -3.12961926e-24,\n",
+       "        -2.23129368e-38, -1.33226815e-38,  0.00000000e+00,  4.07092818e-53,\n",
+       "         6.16086289e-38,  1.02777501e-37,  9.66622014e-37,  1.27726735e-23,\n",
+       "         2.20467059e-23,  5.94955561e-23,  9.29851926e-23,  1.43415971e-22,\n",
+       "         1.79755972e-22,  2.45683068e-22,  2.93296361e-22,  3.32601556e-22,\n",
+       "         4.39118323e-22,  4.80283063e-22,  5.48759304e-22,  6.68208059e-22,\n",
+       "         8.08929090e-22,  8.10459329e-22,  9.69241036e-22,  9.79167888e-22,\n",
+       "         1.13696662e-21,  1.24030723e-21,  1.24975313e-21,  1.49334999e-21,\n",
+       "         1.93991908e-21,  2.18183092e-21,  2.27466763e-21,  2.63310837e-21,\n",
+       "         2.94389137e-21,  3.00921766e-21,  3.23761872e-21,  3.64121144e-21,\n",
+       "         3.81896791e-21,  3.98623646e-21,  4.66215019e-21,  4.76325620e-21,\n",
+       "         5.48196333e-21,  6.15995921e-21,  6.29519865e-21,  6.72746172e-21,\n",
+       "         6.83261590e-21,  6.88001179e-21,  7.61039391e-21,  8.01579689e-21,\n",
+       "         9.44082858e-21,  1.05577792e-20,  1.10119012e-20,  1.10424919e-20,\n",
+       "         1.14487311e-20,  1.33689732e-20,  1.34740388e-20,  1.56868028e-20,\n",
+       "         1.68708788e-20,  1.70736489e-20,  1.75430290e-20,  1.97284602e-20,\n",
+       "         2.04561920e-20,  2.12722133e-20,  2.28560327e-20,  2.36349706e-20,\n",
+       "         2.53356796e-20,  2.73046364e-20,  2.75528585e-20,  2.76970211e-20,\n",
+       "         3.07289839e-20,  3.17351784e-20,  3.28248885e-20,  3.84559900e-20,\n",
+       "         3.88522778e-20,  4.17218687e-20,  4.32795214e-20,  4.61655447e-20,\n",
+       "         5.52977168e-20,  6.66284367e-20,  1.21637764e-19,  3.72136154e-19,\n",
+       "         1.06659115e-18,  1.55130403e-18,  3.59620221e-18,  7.89200764e-18,\n",
+       "         1.69110262e-17,  1.13385558e-16,  1.89339510e-08,  6.08711226e-08,\n",
+       "         1.24908892e-07,  3.45585010e-07,  5.72802456e-07,  6.43828604e-07,\n",
+       "         2.78453665e-06,  3.64026040e-06,  6.23195786e-06,  7.61759314e-06,\n",
+       "         1.12756848e-05,  1.21794278e-05,  1.32530814e-05,  1.42670743e-05,\n",
+       "         1.61006209e-05,  1.67886349e-05,  1.84447634e-05,  1.90799487e-05,\n",
+       "         2.00256314e-05,  2.00296869e-05,  2.11134262e-05,  2.41908069e-05,\n",
+       "         2.64044990e-05,  2.78131440e-05,  3.05945555e-05,  3.09941277e-05,\n",
+       "         3.14448055e-05,  3.57046349e-05,  3.62615218e-05,  3.65424086e-05,\n",
+       "         3.77300861e-05,  3.98536221e-05,  4.39294979e-05,  4.46376815e-05,\n",
+       "         4.98616074e-05,  5.38919982e-05,  5.62856961e-05,  5.92085602e-05,\n",
+       "         6.03642855e-05,  6.18170466e-05,  6.27214838e-05,  6.34797105e-05,\n",
+       "         6.37293742e-05,  6.46951411e-05,  6.49423268e-05,  6.82050343e-05,\n",
+       "         6.86336176e-05,  6.95359732e-05,  7.12703612e-05,  7.53980982e-05,\n",
+       "         7.77449457e-05,  7.87807154e-05,  7.95288612e-05,  8.17327114e-05,\n",
+       "         8.42286813e-05,  8.45883310e-05,  8.59398869e-05,  9.29922272e-05,\n",
+       "         9.41804996e-05,  9.73690359e-05,  1.10192968e-04,  1.10215502e-04,\n",
+       "         1.11817345e-04,  1.16802095e-04,  1.21152127e-04,  1.22012260e-04,\n",
+       "         1.24343044e-04,  1.28584152e-04,  1.32222191e-04,  1.32630411e-04,\n",
+       "         1.35201798e-04,  1.36735373e-04,  1.51588326e-04,  1.58981441e-04,\n",
+       "         1.67852498e-04,  1.72582907e-04,  1.75914281e-04,  1.78930387e-04,\n",
+       "         1.84415673e-04,  1.90681139e-04,  1.93268126e-04,  1.99600766e-04,\n",
+       "         2.02554935e-04,  2.15115348e-04,  2.16485086e-04,  2.44486483e-04,\n",
+       "         2.49842482e-04,  2.53983337e-04,  2.83174998e-04,  2.89394904e-04,\n",
+       "         3.14801118e-04,  3.49480212e-04,  1.00011281e+00,  1.00020469e+00,\n",
+       "         1.00030338e+00,  2.69731920e+00,  6.30289740e+00]),\n",
+       " array([1.10192968e-04, 1.10215502e-04, 1.11817345e-04, 1.16802095e-04,\n",
+       "        1.21152127e-04, 1.22012260e-04, 1.24343044e-04, 1.28584152e-04,\n",
+       "        1.32222191e-04, 1.32630411e-04, 1.35201798e-04, 1.36735373e-04,\n",
+       "        1.51588326e-04, 1.58981441e-04, 1.67852498e-04, 1.72582907e-04,\n",
+       "        1.75914281e-04, 1.78930387e-04, 1.84415673e-04, 1.90681139e-04,\n",
+       "        1.93268126e-04, 1.99600766e-04, 2.02554935e-04, 2.15115348e-04,\n",
+       "        2.16485086e-04, 2.44486483e-04, 2.49842482e-04, 2.53983337e-04,\n",
+       "        2.83174998e-04, 2.89394904e-04, 3.14801118e-04, 3.49480212e-04,\n",
+       "        1.00011281e+00, 1.00020469e+00, 1.00030338e+00, 2.69731920e+00,\n",
+       "        6.30289740e+00]),\n",
+       " 1.0,\n",
+       " 2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from HiSTra.SparseMatrixDeal import *\n",
+    "from HiSTra.SignalFinder import *\n",
+    "matrix_path = \"/media/sdd_14T/translocation/scTL_out/Matrix_aligned/2017_NM_sci-Hi-C_K562_10/500k/chr9_chr22_500k.txt\"\n",
+    "# matrix_path = \"/media/sdd_14T/translocation/scTL_out/Matrix_aligned/2020_PCB_sci-Hi-C_IMR90_downsample_for_2017_NM_sci-Hi-C_K562_10/500k/chr9_chr22_500k.txt\"\n",
+    "sizes_path = \"/media/sdd_14T/sizes/chrom_hg19_noM_noY.sizes\"\n",
+    "sizes = pd.read_csv(sizes_path,sep='\\t',header=None)\n",
+    "M = sparse_matrix_in(matrix_path,0,sizes)\n",
+    "M\n",
+    "M_noise = sparse.random(M.shape[0],M.shape[1],density =0.01,format='coo').toarray()*0.01\n",
+    "M = M + M_noise\n",
+    "cutoff = np.percentile(M,99.99,method='nearest') #去掉特别大的值\n",
+    "M[M>cutoff] = cutoff\n",
+    "MMT = np.dot(M,M.T)\n",
+    "eigenvalue,eigenvector = np.linalg.eigh(MMT,UPLO='L')\n",
+    "# eigenvalue,sum(M),np.percentile(eigenvalue,88,method='nearest'),Outlier(eigenvalue)\n",
+    "eigen_c = abs(eigenvalue)[abs(eigenvalue)>0.0001]\n",
+    "z = eigen_c\n",
+    "number_Max = len(z[z>1e7])#特别大的离值点单独统计 防止bins过多影响效率\n",
+    "z = z[z<=1e7]\n",
+    "eigenvalue,z,cutoff,Outlier(eigen_c)\n",
+    "# resolution_hist = np.percentile(z,88,method='nearest')\n",
+    "# resolution_hist,eigenvalue,eigen_c"
+   ]
   }
  ],
  "metadata": {
