Fix small bugs in scHiC when matrix_file only has one element. Make sure weight in sparse matrix is a list.

--- a/feature-scHiC.ipynb
+++ b/feature-scHiC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c10f28db-1387-49c3-96ce-f7a691236958",
    "metadata": {
     "tags": []
@@ -21,6 +21,61 @@
     "from scipy import sparse\n",
     "from random import sample\n",
     "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f45b95d6-4147-4a39-be48-f5416bb228e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------ Corresponding Eigen folder of 2017NM-scHiC-HAP1_10_cluster exists. ---\n",
+      "------ We have finished 253 pairs of interchromosomes in resolution 500k. ------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2025-2-11 测试极稀疏scHiC数据报错情况\n",
+    "# 报错1：对应数据2017-NM-scHiC-HAP1-100,Step1和Step2已经完成。计算特征值时出现问题。\n",
+    "# Traceback (most recent call last):\n",
+    "#   File \"/share/home/yangqian/anaconda3/envs/HiSTra/lib/python3.8/site-packages/scipy/sparse/_sputils.py\", line 225, in isintlike\n",
+    "#     operator.index(x)\n",
+    "# TypeError: 'numpy.float64' object cannot be interpreted as an integer\n",
+    "\n",
+    "# During handling of the above exception, another exception occurred:\n",
+    "\n",
+    "# Traceback (most recent call last):\n",
+    "#   File \"/share/home/yangqian/anaconda3/envs/HiSTra/bin/HiST\", line 53, in <module>\n",
+    "#     run_main(prog_args)\n",
+    "#   File \"/share/home/yangqian/anaconda3/envs/HiSTra/lib/python3.8/site-packages/HiSTra/run_main.py\", line 114, in run_main\n",
+    "#     SV_resultpath = signalFinder(output_path,testDir_mat_aligned,controlDir_mat_aligned,sizes)\n",
+    "#   File \"/share/home/yangqian/anaconda3/envs/HiSTra/lib/python3.8/site-packages/HiSTra/SignalFinder.py\", line 202, in signalFinder\n",
+    "#     evalue_500k_test,evalue_500k_filepath_test = Eigen_calculation(test_matrix_path,0,sizes)\n",
+    "#   File \"/share/home/yangqian/anaconda3/envs/HiSTra/lib/python3.8/site-packages/HiSTra/SignalFinder.py\", line 56, in Eigen_calculation\n",
+    "#     M = sparse_matrix_in(os.path.join(path_in,filename), k, sizes) # float 乘法快！但是转化很慢。\n",
+    "#   File \"/share/home/yangqian/anaconda3/envs/HiSTra/lib/python3.8/site-packages/HiSTra/SparseMatrixDeal.py\", line 64, in sparse_matrix_in\n",
+    "#     sp = sparse.coo_matrix((weight,(row,column)),shape=(size_chr1,size_chr2))\n",
+    "#   File \"/share/home/yangqian/anaconda3/envs/HiSTra/lib/python3.8/site-packages/scipy/sparse/_coo.py\", line 131, in __init__\n",
+    "#     if isshape(arg1):\n",
+    "#   File \"/share/home/yangqian/anaconda3/envs/HiSTra/lib/python3.8/site-packages/scipy/sparse/_sputils.py\", line 249, in isshape\n",
+    "#     if isintlike(M) and isintlike(N):\n",
+    "#   File \"/share/home/yangqian/anaconda3/envs/HiSTra/lib/python3.8/site-packages/scipy/sparse/_sputils.py\", line 233, in isintlike\n",
+    "#     raise ValueError(msg)\n",
+    "# ValueError: Inexact indices into sparse matrices are not allowed\n",
+    "from HiSTra.SignalFinder import Eigen_calculation\n",
+    "from HiSTra.SparseMatrixDeal import sparse_matrix_in\n",
+    "test_matrix_path=\"/media/sdd_14T/translocation/scTL_out/Matrix_aligned/2017NM-scHiC-HAP1_10_cluster\"\n",
+    "sizes_path = \"/media/sdd_14T/sizes/chrom_hg19_noM_noY.sizes\"\n",
+    "sizes = pd.read_csv(sizes_path,sep='\\t',header=None)\n",
+    "evalue_500k_test,evalue_500k_filepath_test = Eigen_calculation(test_matrix_path,0,sizes)\n",
+    "# control_matrix_path=\"\"\n",
+    "# evalue_500k_control,evalue_500k_filepath_control = Eigen_calculation(control_matrix_path,0,sizes)\n",
+    "# matrix_file=test_matrix_path+\"/500k/chr14_chr21_500k.txt\"\n",
+    "# ans=sparse_matrix_in(matrix_file,0,sizes)"
    ]
   },
   {
